objects/ssot__CaseRelatedIssue__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseRelatedIssueNumber__c</fullName>
        <label>Case Related Issue Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseRelatedIssue_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseRelatedIssue_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CaseRelatedIssue_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>CaseRelatedIssue_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Related Issue Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedIssueId__c</fullName>
        <label>Related Issue</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedIssueObject__c</fullName>
        <label>Related Issue Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelationshipTypeName__c</fullName>
        <label>Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009447119_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseRelatedIssue_RelatedIssueId_map__rel</label>
        <referenceTo>ssot__Problem__dlm</referenceTo>
        <relationshipLabel>CaseRelatedIssue_RelatedIssueId_map__rel</relationshipLabel>
        <relationshipName>rel_1702009447119_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009448369_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseRelatedIssue_RelatedIssueId_map__rel</label>
        <referenceTo>ssot__Incident__dlm</referenceTo>
        <relationshipLabel>CaseRelatedIssue_RelatedIssueId_map__rel</relationshipLabel>
        <relationshipName>rel_1702009448369_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>